// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pack Snapshots Middle&Bottom 1`] = `
<ul
  className="sc-AxjAm fxMcSg"
>
  <li
    className="sc-AxirZ dItNxg test"
  >
    Loan
  </li>
  <li
    className="sc-AxirZ dItNxg test"
  >
    Credit
  </li>
  <li
    className="sc-AxirZ dItNxg test"
  >
    Saving
  </li>
  <li
    className="sc-AxirZ dItNxg test"
  >
    About this bank
  </li>
</ul>
`;

exports[`Pack Snapshots No props 1`] = `
<ul
  className="sc-AxjAm fxMcSg"
>
  <li
    className="sc-AxirZ dItNxg"
  >
    Loan
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    Credit
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    Saving
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    About this bank
  </li>
</ul>
`;

exports[`Pack Snapshots bottom 1`] = `
<ul
  className="sc-AxjAm jwTVsl"
>
  <li
    className="sc-AxirZ dItNxg"
  >
    Loan
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    Credit
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    Saving
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    About this bank
  </li>
</ul>
`;

exports[`Pack Snapshots className 1`] = `
<ul
  className="sc-AxjAm fxMcSg className"
>
  <li
    className="sc-AxirZ dItNxg"
  >
    Loan
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    Credit
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    Saving
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    About this bank
  </li>
</ul>
`;

exports[`Pack Snapshots justify 1`] = `
<ul
  className="sc-AxjAm cMEmZt"
>
  <li
    className="sc-AxirZ dItNxg test"
  >
    Loan
  </li>
  <li
    className="sc-AxirZ dItNxg test"
  >
    Credit
  </li>
  <li
    className="sc-AxirZ dItNxg test"
  >
    Saving
  </li>
  <li
    className="sc-AxirZ dItNxg test"
  >
    About this bank
  </li>
</ul>
`;

exports[`Pack Snapshots middle 1`] = `
<ul
  className="sc-AxjAm cjGdQf"
>
  <li
    className="sc-AxirZ dItNxg"
  >
    Loan
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    Credit
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    Saving
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    About this bank
  </li>
</ul>
`;

exports[`Pack Snapshots no Children 1`] = `
<ul
  className="sc-AxjAm fxMcSg"
/>
`;

exports[`Pack Snapshots noWrap 1`] = `
<ul
  className="sc-AxjAm bmPTJw"
>
  <li
    className="sc-AxirZ dItNxg"
  >
    Loan
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    Credit
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    Saving
  </li>
  <li
    className="sc-AxirZ dItNxg"
  >
    About this bank
  </li>
</ul>
`;
